[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "lastmileops-env"
version = "1.0.0"
description = "LastMileOps: A telecom field-ops OpenEnv environment for AI agents"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "pydantic>=2.7.0",
    "openai>=1.30.0",
    "requests>=2.31.0",
    "huggingface_hub>=0.23.0",
    "pyyaml>=6.0",
    "openenv",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["server*", "graders*"]